2003-07-25  Martin Baulig  <martin@ximian.com>

	* test-208.cs: New test for bug #46788.

2003-07-22  Martin Baulig  <martin@ximian.com>

	* test-207.cs: New test for expressions which return delegates.

2003-07-21  Martin Baulig  <martin@ximian.com>

	* test-206.cs: New test for bug #46502.

2003-07-20  Martin Baulig  <martin@ximian.com>

	* test-205.cs: New test for some namespace stuff.

2003-07-16  Ravi Pratap  <ravi@ximian.com>

	* test-39.cs: Improve test to check emission on interfaces too.

2003-07-14  Ravi Pratap M  <ravi@ximian.com>

	* Makefile: Make sure that we use the newly generated compiler
	to run the tests, not the installed one.

	Modify targets to compile and run in one go instead of separate
	targets for each task.

	* test-196.cs: Fix careless error - returning a value from a void
	Main ().

	Add it back to the test suite.

2003-07-14  Martin Baulig  <martin@ximian.com>

	* test-204.cs: User defined conditional logical operators; bug #40505.

2003-07-14  Martin Baulig  <martin@ximian.com>

	* test-203.cs: Added test for bug #33026.

2003-07-13  Ravi Pratap M  <ravi@ximian.com>

	* test-178.cs: Use this as it is a free slot. Test 
	for bug #45876.

	* makefile: Update.

	* README.tests: Update

2003-07-13  Martin Baulig  <martin@ximian.com>

	* test-202.cs: Added test for bug #41975.

2003-07-13  Martin Baulig  <martin@ximian.com>

	* test-201.cs: Added test for bug #35631.

2003-07-12  Martin Baulig  <martin@ximian.com>

	* test-200.cs: Added test for bug #45854.

2003-07-08  Martin Baulig  <martin@ximian.com>

	* test-198.cs, test-199.cs: New tests for bugs #36316, #36314 and
	#36313.

2003-07-05  Martin Baulig  <martin@ximian.com>

	* test-197.cs: New test for bug #42973.

2003-06-29  Miguel de Icaza  <miguel@ximian.com>

	* makefile (TEST_SOURCES): Add the tests that require an assembly,
	so we dont get another regression here (#37521).

2003-05-27  Ravi Pratap  <ravi@ximian.com>

	* test-45.cs : Enable code which tests IntPtr array