@@ -1,3 +1,7 @@
+2003-07-26  Martin Baulig  <martin@ximian.com>
+
+	* test-209.cs: New test for implict conversions and embedded assignments.
+
 2003-07-25  Martin Baulig  <martin@ximian.com>
 
 	* test-208.cs: New test for bug #46788.
